@@ -33,3 +33,5 @@ void on_choose_movie_segment1_activate(GtkMenuItem * menuitem,
 								   gpointer user_data);
 void on_exit_application(GtkWidget *widget, gpointer user_data);
 void on_open_from_file(GtkWidget *widget, gpointer user_data);
+void on_open_from_template(GtkWidget *widget, gpointer user_data);
+void on_open_template_close(GtkWidget *widget, gpointer user_data);
