@@ -24,9 +24,7 @@
  */
 
 GtkWidget *create_VA_Flipbook(void);
-GtkWidget *create_File_Menu(void);
-GtkWidget *create_Edit_Menu(void);
-GtkWidget *create_View_Menu(void);
+GtkWidget *create_open_template(void);
 GtkWidget *create_choose_segment(void);
 GtkWidget *create_Preferences_Window(void);
 
