@@ -74,3 +74,10 @@ Mon Dec 27 22:40:03 PST 1999
 (Mandrake)
 
 added license as well as copyright statements to all the files.
+
+---------------------------------------------------------------------------
+
+Wed Dec 29 14:23:22 PST 1999
+(Mandrake)
+
+added open using template dialog
